argocd/Ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: azure-acme-issuer
  name: argocd
  namespace: argocd
spec:
  ingressClassName: haproxy
  rules:
    - host: argo.cluster.anderwerse.de
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argo.cluster.anderwerse.de
      secretName: argocd-tls
